modules/gdscript/tests/scripts/analyzer/errors/construct_abstract_script.gd
const A = preload("./construct_abstract_script.notest.gd")

func test():
	var _a := A.new()
